--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
     "react-spinners": "^0.17.0"
   },
   "devDependencies": {
