--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "next": "15.3.1",
